chore: remove package android

--- a/app.json
+++ b/app.json
@@ -21,8 +21,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "googleServicesFile": "./google-services.json",
-      "package": "com.evrwaq.movies_match"
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
