--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Firebase Config
-apiKey=
-authDomain=
-projectId=
-storageBucket=
-messagingSenderId=
-appId=
+API_KEY=
+AUTH_DOMAIN=
+PROJECT_ID=
+STORAGE_BUCKET=
+MESSAGING_SENDER_ID=
+APP_ID=
